# medical_data_analysis

./: .env  .env.dev  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
apps/analysis/: models.py  pipeline.py  urls.py  utils.py  views.py
apps/analysis/management/commands/: train_model.py
apps/common/repositories/: analysis_repository.py  base.py  user_repository.py
apps/common/services/: base.py  user_service.py
apps/core/: __init__.py  models.py
config/: asgi.py  settings.py  urls.py  wsgi.py
config/settings/: base.py  development.py
docs/: postman_collection.json
tests/: conftest.py
tests/unit/: test_analysis_api.py  test_analysis_pipeline.py
tests/unit/models/: test_user_models.py
tests/unit/repositories/: test_analysis_repositories.py  test_base_repository.py  test_user_repository.py
tests/unit/services/: test_base_service.py  test_user_service.py
