[tool.poetry]
name = "django-as-microservice-template"
version = "0.1.0"
description = ""
authors = ["Amir H. Sadati <eng.amirh.sadati@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4"
django = ">=5.2.3,<6.0.0"
django-environ = ">=0.12.0,<0.13.0"
uvicorn = ">=0.34.3,<0.35.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-django = "^4.11.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
