[tool.poetry]
name = "django-as-microservice-template"
version = "0.1.0"
description = ""
authors = ["Amir H. Sadati <eng.amirh.sadati@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4"
django = ">=5.2.3,<6.0.0"
django-environ = ">=0.12.0,<0.13.0"
uvicorn = ">=0.34.3,<0.35.0"
pymongo = "^4.13.2"
pandas = "^2.3.1"
numpy = "^2.3.1"
scikit-learn = "^1.7.0"
xgboost = "^3.0.2"
djangorestframework-simplejwt = "^5.5.0"
djangorestframework = "^3.16.0"
pytest-env = "^1.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-django = "^4.11.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
